--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@
 # finds first
 
 [defaults]
-
+callback_whitelist = profile_roles, profile_tasks, timer
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
